--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,12 +1,6 @@
-/* block specific CSS goes here */
-
-main .section.hero-container {
-    margin: -30px 0 0;
+main .section.hero-container .hero-wrapper {
     padding: 0;
-}
-
-main .section .hero-wrapper {
-    padding: 0;
+    margin: 0;
     width: 100%;
 }
 
