--- a/styles/styles.css
+++ b/styles/styles.css
@@ -270,17 +270,13 @@ main input:hover {
   border: 1px solid var(--text-color);
 }
 
-main .section {
-  margin: 48px 0;
-}
-
-main .section:first-child {
-  margin-top: 0;
-}
-
 main .section > div {
   padding: 0 15px;
-  margin: 0 auto;
+  margin: 48px auto;
+}
+
+main .section:first-child > div {
+  margin-top: 0;
 }
 
 main pre {
@@ -359,25 +355,25 @@ main .section.highlight {
   background-color: var(--highlight-background-color);
 }
 
-.section.tabbed-container-full-width > div {
+main .section.tabbed-container-full-width > div {
   padding: 0;
   width: unset;
 }
 
-.section.tabbed-container ul.tab-navigation {
+main .section.tabbed-container ul.tab-navigation {
   padding: 0;
   margin: 25px;
   text-align: center;
 }
 
-.section.tabbed-container ul.tab-navigation li {
+main .section.tabbed-container ul.tab-navigation li {
   margin: 0 auto;
   padding: 0 1% 8px;
   display: block;
   width: 35%;
 }
 
-.section.tabbed-container ul.tab-navigation button {
+main .section.tabbed-container ul.tab-navigation button {
   background: 0 0;
   border: none;
   color: var(--volvo-text-gray);
@@ -385,8 +381,8 @@ main .section.highlight {
   margin: 0;
 }
 
-.section.tabbed-container ul.tab-navigation li.active,
-.section.tabbed-container ul.tab-navigation li:hover {
+main .section.tabbed-container ul.tab-navigation li.active,
+main .section.tabbed-container ul.tab-navigation li:hover {
   border-bottom: 3px solid var(--link-color);
 }
 
@@ -454,7 +450,7 @@ a.button.text-link-with-video::after {
 }
 
 @media screen and (min-width: 480px) {
-  .section.tabbed-container ul.tab-navigation li {
+  main .section.tabbed-container ul.tab-navigation li {
     margin: 0 3%;
     display: inline-block;
     width: unset;
@@ -495,12 +491,12 @@ a.button.text-link-with-video::after {
     --sub-nav-height: 48px;
   }
 
-  main {
-    margin: 30px 0;
-  }
-
   main .section > div {
     width: 960px;
+  }
+
+  main .section:first-child > div {
+    margin-top: 30px;
   }
 
   header .sub-nav.block {
