fix: wrapper and hero margins (#154)
* fix: hero top margin
* fix: wrapper margins

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,12 +1,6 @@
-/* block specific CSS goes here */
-
-main .section.hero-container {
+main .section.hero-container .hero-wrapper {
+    padding: 0;
     margin: 0;
-    padding: 0;
-}
-
-main .section .hero-wrapper {
-    padding: 0;
     width: 100%;
 }
 
