--- a/blocks/engine-specifications/engine-specifications.css
+++ b/blocks/engine-specifications/engine-specifications.css
@@ -88,7 +88,7 @@ main .section .engine-specifications-wrapper {
     width: 100vw;
     padding: 0 0 80px;
     background-color: #F7F7F7;
-
+    margin-top: 0 !important;
   }
   
   .engine-specifications.engine {
