feat: cta list in teaser cards

--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -35,7 +35,7 @@
 }
 
 /* teaser title */
-.block.teaser-cards :is(h2, h3) {
+.block.teaser-cards :is(h2, h3, h4) {
   margin: 0 0 10px;
   font-size: var(--heading-font-size-m);
   letter-spacing: -.1px;
@@ -92,6 +92,15 @@
 .block.teaser-cards a:hover {
   border-color: var(--btn-hover);
   color: var(--btn-hover);
+}
+
+.block.teaser-cards .teaser.with-cta-list :is(h2, h3, h4) a::after {
+  display: none;
+}
+
+/* center */
+.block.teaser-cards.center .teaser {
+  text-align: center;
 }
 
 /* link list on mobile */
