--- a/styles/styles.css
+++ b/styles/styles.css
@@ -248,6 +248,12 @@ button.primary {
   border: 2px solid var(--text-color);
 }
 
+a.button.primary.dark,
+button.primary {
+  color: var(--c-white);
+  background-color: var(--text-color);
+}
+
 button:disabled, button:disabled:hover {
   background-color: var(--overlay-background-color);
   cursor: unset;
@@ -361,6 +367,21 @@ main .section.highlight {
   background-color: var(--highlight-background-color);
 }
 
+body.disable-scroll, body.disable-scroll main {
+  overflow: hidden;
+}
+
+ul.cta-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+ul.cta-list li {
+  padding: 0 50px;
+}
+
 main .section.tabbed-container-full-width > div {
   padding: 0;
   width: unset;
@@ -467,6 +488,12 @@ a.button.text-link-with-video::after {
   main .section > div {
     width: 756px;
   }
+
+  ul.cta-list {
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+  }
 }
 
 @media (max-width: 991px) {
@@ -513,4 +540,8 @@ a.button.text-link-with-video::after {
   main .section > div {
     width: 1200px;
   }
+}
+
+.video-link-wrapper {
+  text-align: center;
 }
