--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -1,6 +1,7 @@
 .embed.embed-full-width {
   width: 100%;
   position: relative;
+  cursor: pointer;
 }
 
 .embed-video {
@@ -10,6 +11,10 @@
 .embed-video-element {
   aspect-ratio: 16/9;
   width: 100%;
+}
+
+.embed .video-icon-wrapper {
+  pointer-events: none;
 }
 
 @media screen and (min-width: 768px) {
