--- a/styles/styles.css
+++ b/styles/styles.css
@@ -155,6 +155,10 @@ header .sub-nav.block {
   position: absolute;
 }
 
+/* specific page styles */
+main.center { text-align: center; }
+main.center .block { text-align: initial; }
+
 h1, h2, h3,
 h4, h5, h6 {
   font-family: var(--heading-font-family);
@@ -267,6 +271,8 @@ a.button.primary:hover, button.primary:hover {
   border-color: var(--btn-border-hover);
 }
 
+/* commont elements */
+
 main input {
   font-size: 1.25rem;
   width: 100%;
@@ -283,15 +289,6 @@ main input {
 
 main input:hover {
   border: 1px solid var(--text-color);
-}
-
-main .section > div {
-  padding: 0 15px;
-  margin: 48px auto;
-}
-
-main .section:first-child > div {
-  margin-top: 0;
 }
 
 main pre {
@@ -335,6 +332,17 @@ main img {
 main p img {
   display: block;
   margin: auto;
+}
+
+/* sections */
+
+main .section > div {
+  padding: 0 15px;
+  margin: 48px auto;
+}
+
+main .section:first-child > div {
+  margin-top: 0;
 }
 
 main .section-with-background {
