--- a/templates/magazine/magazine.css
+++ b/templates/magazine/magazine.css
@@ -1,3 +1,95 @@
+body.magazine > main {
+  position: relative;
+  padding: 108px 15px 0 15px;
+  margin: 0 auto;
+}
+
+.section.template .row.size-img {
+  display: flex;
+  flex-direction: column;
+  height: 410px;
+  padding: 0;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+
+.section.template .row.size-img picture {
+  width: 100%;
+  order: 2;
+  height: 140px;
+
+}
+
+.section.template .row.size-img picture img {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+}
+
+.section.template.article-hero > div > div.content {
+  order: 1;
+  width: 100%;
+  height: 175px;
+}
+
+.section.template.article-hero > div > div > div.top-details.hide-desktop {
+  display: inline;
+}
+
+.section.template.article-hero > div > div > h3.title-sentence {
+  font-size: 24px!important;
+    letter-spacing: -.1px!important;
+    color: var(--volvo-text-gray);
+    margin-bottom: 10px;
+    font-weight: 700;
+    line-height: 32px!important;
+}
+
+.section.template.article-hero > div > div > div.details span.hide-mobile {
+  display: none;
+}
+
+.section.template.article-hero > div > div > div.top-details {
+  font-size: var(--body-font-size-xs);
+
+}
+
+.section.template.article-hero > div > div > div.details {
+ color: var(--volvo-text-light-gray);
+ font-size: var(--body-font-size-xs);
+}
+
+.section.template.article-hero > div > div > div.top-details > span,
+.section.template.article-hero > div > div > div.details span {
+  margin: 0 15px 0 8px;
+}
+
+.section.template.article-hero > div > div > div.details > i {
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  line-height: 35px;
+  border-radius: 35px;
+  background-color: var(--volvo-text-light-gray);
+  color: var(--c-white);
+  text-align: center;
+  font-size: 15px;
+}
+
+.section.template.article-sidebar > div.topics > ul.topic-list > li {
+  list-style: none;
+    line-height: 1.2;
+    color: var(--volvo-text-light-gray);
+}
+
+.section.template.article-sidebar > div.topics > ul.topic-list > li::before {
+  content: '';
+  border: 4px solid var(--volvo-text-gray)!important;
+  margin-top: 5px;
+  margin-left: -20px;
+  position: absolute;
+}
+
 .section.article-sidebar .share-icons button {
   border-radius: 50%;
   width: 45px;
@@ -8,7 +100,7 @@
 }
 
 .share {
-  border-top: 1px solid #E1DFDD;
+  border-top: 1px solid var(--btn-background-hover);
   padding-top: 30px;
 }
 
@@ -16,4 +108,82 @@
   color: #53565A;
     font-weight: 700;
     font-size: 12px;
+}
+
+.section.related-articles-container > div.default-content-wrapper {
+  text-align: center;
+}
+
+@media screen and (min-width: 992px) {
+  body.magazine > main {
+    padding-top: 0;
+    width: 75%!important;
+  }
+  
+  main .section > div {
+    width: 75%;
+  }
+
+  .section.template .row.size-img {
+    flex-direction: unset;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+  }
+
+  .section.template.article-hero > div > div > div.top-details.hide-desktop {
+    display: none;
+  }
+
+  .section.template.article-hero > div > div > div.details > span.hide-mobile {
+    display: inline;
+  }
+
+  .section.template .row.size-img picture {
+    order: 1;
+    flex: 0 0 50%;
+    max-width: 50%;
+    height: unset;
+  }
+
+  .section.template .row.size-img picture img {
+    height: 410px!important;
+  }
+  
+  .section.template.article-hero > div > div.content {
+    order: 2;
+    border-top: 1px solid var(--background-hover-color);
+    border-bottom: 1px solid var(--background-hover-color);
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding: 30px 45px;
+    height: 100%;
+    position: relative;
+  }
+
+  .section.template.article-hero > div > div > div.details {
+    position: absolute;
+    bottom: 10px;
+  }
+
+  .section.columns-container {
+    float: right;
+    margin: 0 1%;
+    width: 75%;
+  }
+
+  .section.columns-container > div {
+    width: 100%;
+  }
+
+  .section.template.article-sidebar {
+    float: left;
+    width: 20%!important;
+    margin: 0 1%;
+    padding: 6px 0 0;
+  }
+
+  .section.template.article-sidebar > div {
+    width: 100%;
+  }
 }
