--- a/blocks/specifications/specifications.css
+++ b/blocks/specifications/specifications.css
@@ -5,7 +5,6 @@
 }
 
 .block.specifications p {
-    margin: 0 0 24px;
     line-height: 1.5;
 }
 
@@ -60,6 +59,10 @@
 
 .block.specifications .row:nth-child(2n-1) .cell {
     background-color: #F2F2F2;
+}
+
+.block.specifications .cell > * {
+    margin: 0;
 }
 
 /* row group and row group header */
