--- a/blocks/specifications/specifications.css
+++ b/blocks/specifications/specifications.css
@@ -65,6 +65,12 @@
     margin: 0;
 }
 
+.block.specifications[aria-colcount="1"] .row,
+.block.specifications[aria-colcount="1"] .column-header,
+.block.specifications[aria-colcount="1"] .image-header {
+    grid-template-columns: 1fr;
+}
+
 /* row group and row group header */
 .block.specifications [role="rowgroup"] {
     height: 0;
@@ -80,16 +86,13 @@
     background: none;
     border-radius: 0;
     border: none;
+    border-top: solid #F2F2F2;
     padding: 15px;
     margin: 0;
     color: unset;
     text-align: unset;
     font-size: 16px;
-    width: 100%
-}
-
-.block.specifications .rowgroup-header:not(:first-child) {
-    border-top: solid #F2F2F2;
+    width: 100%; 
 }
 
 .block.specifications .rowgroup-header:hover {
