--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -76,8 +76,9 @@ header nav .hamburger-toggle .hamburger-icon {
 /* the search input  */
 header nav .search {
   height: 0;
+  opacity: 0;
+  transition: all 400ms ease-out;
   overflow: hidden;
-  transition: height 400ms ease-out;
   background-color: white;
   display: flex;
   top: var(--nav-height);
@@ -93,12 +94,13 @@ header nav .search div {
 
 header nav .search-toggle[aria-expanded=true]~.search {
   height: 59px;
+  margin-block-end: 15px;
+  opacity: 1;
 }
 
 header nav .search input {
   display: block;
   width: 100%;
-  height: 44px;
   padding: 10px 40px 10px 15px;
   border: none;
   border-radius: 0;
@@ -109,7 +111,6 @@ header nav .search input {
 }
 
 header nav .search .search-button {
-  height: 44px;
   padding: 0 10px;
   color: #A7A8A9;
   border: none;
