--- a/templates/magazine/magazine.css
+++ b/templates/magazine/magazine.css
@@ -35,14 +35,11 @@ body.magazine>main {
 i.fa {
   min-width: 16px;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .section.template.article-hero>div>div>div.top-details.hide-desktop {
   display: inline;
-}
-
-.section.template.article-hero>div>div>div.top-details.hide-desktop>span.date {
-  min-width: 100px;
 }
 
 .section.template.article-hero>div>div>h3.title-sentence {
@@ -70,8 +67,13 @@ i.fa {
 .section.template.article-hero>div>div>div.top-details>span,
 .section.template.article-hero>div>div>div.details>span,
 .section.template.article-hero>div>div>div.details>span>span {
-  margin: 0 15px 8px 8px;
+  margin: 0 16px 0 8px;
   line-height: 35px;
+  vertical-align: middle;
+}
+
+.section.template.article-hero > div > div > div.details > span.hide-mobile > span.date {
+  width: 110px;
 }
 
 .section.template.article-hero>div>div>div.details>i {
@@ -146,7 +148,7 @@ i.fa {
   }
 
   .section.template.article-hero>div>div>div.details>span.hide-mobile {
-    display: inline;
+    display: inline-block;
   }
 
   .section.template .row.size-img picture {
