improve CLS score 5

--- a/templates/magazine/magazine.css
+++ b/templates/magazine/magazine.css
@@ -33,7 +33,8 @@ body.magazine>main {
 }
 
 i.fa {
-  min-width: 16px;
+  font-size: 20px;
+  min-width: 20px;
   display: inline-block;
   vertical-align: middle;
 }
@@ -51,7 +52,7 @@ i.fa {
   line-height: 32px !important;
 }
 
-.section.template.article-hero>div>div>div.details span.hide-mobile {
+.section.template.article-hero>div>div>div.details .hide-mobile {
   display: none;
 }
 
@@ -65,18 +66,13 @@ i.fa {
 }
 
 .section.template.article-hero>div>div>div.top-details>span,
-.section.template.article-hero>div>div>div.details>span,
-.section.template.article-hero>div>div>div.details>span>span {
+.section.template.article-hero>div>div>div.details>span {
   margin: 0 16px 0 8px;
   line-height: 35px;
   vertical-align: middle;
 }
 
-.section.template.article-hero > div > div > div.details > span.hide-mobile > span.date {
-  width: 110px;
-}
-
-.section.template.article-hero>div>div>div.details>i {
+.section.template.article-hero>div>div>div.details>i.fa-user {
   display: inline-block;
   height: 35px;
   width: 35px;
@@ -147,7 +143,7 @@ i.fa {
     display: none;
   }
 
-  .section.template.article-hero>div>div>div.details>span.hide-mobile {
+  .section.template.article-hero>div>div>div.details>.hide-mobile {
     display: inline-block;
   }
 
