--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -149,6 +149,14 @@ body.disable-scroll, body.disable-scroll main {
   content: "\f021"
 }
 
+.fa-caret-left::before {
+  content: "\f0d9"
+}
+
+.fa-caret-right::before {
+  content: "\f0da"
+}
+
 /* The injected widget should be customized in the SDK UI by an administrator.
    see https://my.onetrust.com/articles/en_US/Knowledge/UUID-8a1fff4c-95c6-be5f-4369-228aa86283c6
    Just overriding the bare minimum to make it readable: */
