--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -7,6 +7,10 @@
     width: 100%;
 }
 
+.columns.center {
+    text-align: center;
+}
+
 @media (min-width: 900px) {
     .columns > div {
         display: flex;
