--- a/styles/styles.css
+++ b/styles/styles.css
@@ -412,6 +412,10 @@ main .section.tabbed-container-full-width > div {
   width: unset;
 }
 
+main .section.tabbed-container-full-width {
+  --horizontal-padding: calc((100% - var(--wrapper-width)) / 2);
+}
+
 main .section.tabbed-container ul.tab-navigation {
   padding: 0;
   margin: 25px;
