--- a/blocks/tabbed-carousel/tabbed-carousel.css
+++ b/blocks/tabbed-carousel/tabbed-carousel.css
@@ -12,10 +12,11 @@
 
 .tabbed-carousel-wrapper .tab-container::-webkit-scrollbar {
     display: none;
- }
+}
 
 .tabbed-carousel-wrapper .tab-item {
-    flex: 0 0 100%;
+    flex: 0 0 auto;
+    width: 100%;
     scroll-snap-align: start;
 }
 
@@ -28,8 +29,33 @@
     text-align: left;
 }
 
-.tabbed-carousel-wrapper .tab-content > div,
-.tabbed-carousel-wrapper .tab-content > p {
-    width: 70%;
+.tabbed-carousel-wrapper .tab-content>div,
+.tabbed-carousel-wrapper .tab-content>p {
     margin: 30px auto 0;
+}
+
+.tabbed-container-full-width .tabbed-carousel-wrapper .tab-item p {
+    padding: 0 15px;
+    opacity: 0;
+    transition: opacity 200ms ease;
+}
+
+.tabbed-container-full-width .tabbed-carousel-wrapper .tab-item.active p {
+    opacity: 1;
+}
+
+.tabbed-container-full-width .tabbed-carousel-wrapper img {
+    min-width: calc(var(--wrapper-width) - 2 * 15px);
+}
+
+
+@media screen and (min-width: 768px) {
+    .tabbed-container-full-width .tabbed-carousel-wrapper .tab-container {
+        scroll-padding-left: var(--horizontal-padding);
+        padding: 0 var(--horizontal-padding);
+    }
+
+    .tabbed-container-full-width .tabbed-carousel-wrapper .tab-item {
+        width: var(--wrapper-width);
+    }
 }
