#167 Add video for hero

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -68,6 +68,18 @@ main .hero a.cta {
     font-size: var(--body-font-size-xs);
 }
 
+main .hero-with-video picture img {
+    height: 230px;
+    max-height: 230px;
+}
+
+main .hero-with-video .hero-video {
+    display: block;
+    width: 100%;
+    max-height: 230px;
+    object-fit: cover;
+}
+
 @media screen and (min-width: 481px) {
     main .hero-headings {
         color: white;
@@ -124,8 +136,23 @@ main .hero a.cta {
         top: 0;
         background-image: linear-gradient(-30deg,rgba(0 0 0 / 0%),rgba(0 0 0 / 40%));
     }
-}
 
+    main .hero-with-video picture img {
+        height: 730px;
+        max-height: 730px;
+    }
+
+    main .hero-with-video .hero-video {
+        height: 730px;
+        max-height: 730px;
+    }
+
+    main .hero-with-video .hero-headings {
+        top: 50%;
+        padding-top: 0;
+        transform: translateY(-50%);
+    }
+}
 
 @media screen and (min-width: 992px) {
     main .hero-headings {
@@ -135,10 +162,22 @@ main .hero a.cta {
         padding-left: 47px;
         text-align: left;
     }
+
+    main .hero-with-video .hero-headings {
+        top: 50%;
+        padding-top: 0;
+        transform: translate(-50%, -50%);
+    }
 }
 
 @media screen and (min-width: 1300px) {
     main .hero-headings {
         width: 1153px;
+    }
+
+    main .hero-with-video .hero-headings {
+        transform: translate(40%, -50%);
+        top: 50%;
+        left: 0;
     }
 }
