--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -99,6 +99,7 @@ header nav .search-toggle[aria-expanded=true]~.search {
 header nav .search input {
   display: block;
   width: 100%;
+  height: 59px;
   padding: 10px 40px 10px 15px;
   border: none;
   border-radius: 0;
@@ -109,6 +110,7 @@ header nav .search input {
 }
 
 header nav .search .search-button {
+  height: 59px;
   padding: 0 10px;
   color: #A7A8A9;
   border: none;
