--- a/blocks/key-facts/key-facts.css
+++ b/blocks/key-facts/key-facts.css
@@ -9,10 +9,6 @@
   gap: 0 30px;
 }
 
-.key-facts-wrapper .key-facts.wide-columns > div {
-  gap: 0;
-}
-
 .key-facts-wrapper .key-fact {
   display: flex;
   flex-flow: column;
@@ -77,7 +73,7 @@
   width: 100%;;
 }
 
-.key-fact div::before {
+.key-fact div.trailing-line::before {
   content: " ";
   display: block;
   margin: 0 auto;
@@ -92,12 +88,12 @@
   }
   
   .key-facts-wrapper .key-facts.wide-columns .key-fact {
-    flex: 0 0 50%;
+    flex: 0 0 45%;
   }
 }
 
 @media screen and (min-width: 768px) {
   .key-facts-wrapper .key-facts.wide-columns .key-fact {
-    flex: 0 0 33.3333%;
+    flex: 1 0 30%;
   }
 }
